Added new Thymeleaf, project working

--- a/brascolor/src/main/resources/application.properties
+++ b/brascolor/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/brascolor
 spring.datasource.username=root
 spring.datasource.password=mamae1010
