--- a/brascolor/pom.xml
+++ b/brascolor/pom.xml
@@ -17,6 +17,7 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
+		<!-- Authentication 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-oauth2-authorization-server</artifactId>
@@ -28,7 +29,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -50,9 +51,9 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-		    <groupId>io.github.wimdeblauwe</groupId>
-		    <artifactId>htmx-spring-boot-thymeleaf</artifactId>
-		    <version>3.1.1</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+			<version>3.1.5</version>
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
